Refactor agent logic into shared module and add Gradio UI
- Extract persona and tool definitions into `agent_logic.py`
- Add Gradio web UI for testing personas
- Update Docker setup to expose Gradio port and run web UI separately
- Add `.env.example` and update README with setup instructions
- Simplify bot.py by importing shared logic

--- a/discord-bot/Dockerfile
+++ b/discord-bot/Dockerfile
@@ -15,6 +15,8 @@ ENV KALEIDO_CHROMIUM_PATH=/usr/bin/chromium
 COPY requirements.txt .
 RUN pip install uv && uv pip install --system --no-cache -r requirements.txt
 
-COPY bot.py .
+COPY . .
+
+EXPOSE 7860
 
 CMD ["python", "bot.py"]
