--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,9 +12,26 @@ services:
     build: ./discord-bot
     container_name: discord_bot
     environment:
-      - DISCORD_TOKEN=${DISCORD_TOKEN}
-      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
-      - OPENROUTER_MODEL=${OPENROUTER_MODEL}
+      - DISCORD_TOKEN=${DISCORD_TOKEN:-}
+      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY:-}
+      - OPENROUTER_MODEL=${OPENROUTER_MODEL:-google/gemini-2.0-flash-lite-preview-02-05:free}
+      - DISCORD_CHANNEL_ID=${DISCORD_CHANNEL_ID:-0}
+      - MCP_SERVER_URL=http://mcp-server:8000/mcp
+    depends_on:
+      - mcp-server
+    restart: always
+
+  web-ui:
+    build: ./discord-bot
+    container_name: web_ui
+    command: python gradio_ui.py
+    ports:
+      - "7860:7860"
+    environment:
+      - DISCORD_TOKEN=${DISCORD_TOKEN:-}
+      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY:-}
+      - OPENROUTER_MODEL=${OPENROUTER_MODEL:-google/gemini-2.0-flash-lite-preview-02-05:free}
+      - DISCORD_CHANNEL_ID=${DISCORD_CHANNEL_ID:-0}
       - MCP_SERVER_URL=http://mcp-server:8000/mcp
     depends_on:
       - mcp-server
