Add Arize Phoenix observability instrumentation
- Integrate Arize Phoenix tracing for LangChain via OpenTelemetry
- Add required dependencies to requirements.txt
- Configure Phoenix service in docker-compose.yml
- Set PHOENIX_COLLECTOR_ENDPOINT for agent and web-ui services

--- a/discord-bot/requirements.txt
+++ b/discord-bot/requirements.txt
@@ -17,3 +17,9 @@ pandas
 # Utils
 python-dotenv
 fastmcp
+
+# Observability (Local LangSmith alternative)
+arize-phoenix
+openinference-instrumentation-langchain
+opentelemetry-sdk
+opentelemetry-exporter-otlp
