Switch database from SQLite to MongoDB
- Replace SQLite with MongoDB for data persistence
- Add MongoDB service to docker-compose.yml
- Update MCP server to use pymongo and MongoDB collections
- Add mongo_data/ and phoenix_data/ to .gitignore

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,19 @@ services:
     container_name: mcp_server
     ports:
       - "8000:8000"
+    environment:
+      - MONGO_URI=mongodb://mongodb:27017/bot_db
+    depends_on:
+      - mongodb
+    restart: always
+
+  mongodb:
+    image: mongo:latest
+    container_name: mongodb
+    ports:
+      - "27117:27017"
+    volumes:
+      - ./mongo_data:/data/db
     restart: always
 
   discord-bot:
