Add C++ and Python personas, curricula, and tools support

--- a/mcp-server/Dockerfile
+++ b/mcp-server/Dockerfile
@@ -6,8 +6,8 @@ COPY requirements.txt .
 RUN pip install uv && uv pip install --system --no-cache -r requirements.txt
 
 COPY server.py .
-# Create data directory and copy curriculum
+# Create data directory and copy all curricula
 RUN mkdir -p data
-COPY data/rust_curriculum.json data/
+COPY data/*.json data/
 
 CMD ["python", "server.py"]
