Replace Discord bot with Telegram bot
This commit migrates the bot implementation from Discord to Telegram,
updating environment variables, dependencies, and configuration
accordingly.

--- a/discord-bot/requirements.txt
+++ b/discord-bot/requirements.txt
@@ -5,9 +5,11 @@ langchain-community>=0.3.0
 langchain-mcp-adapters>=0.2.0
 
 # Bot & UI
-discord.py
+python-telegram-bot[job-queue]
+nest_asyncio
 gradio
 aiohttp
+telegramify-markdown
 
 # Data & Viz
 plotly
