--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Required: Your Discord Bot Token
-DISCORD_TOKEN=
+# Required: Your Telegram Bot Token
+TELEGRAM_TOKEN=
 
 # Required: Your OpenRouter API Key
 OPENROUTER_API_KEY=
@@ -7,5 +7,5 @@ OPENROUTER_API_KEY=
 # Optional: The model to use (defaults to gemini-2.0-flash-lite-preview-02-05:free)
 OPENROUTER_MODEL=google/gemini-2.0-flash-lite-preview-02-05:free
 
-# Optional: Discord Channel ID for daily check-ins
-DISCORD_CHANNEL_ID=0
+# Optional: Telegram Chat ID for daily check-ins
+TELEGRAM_CHAT_ID=
