Refactor to use nanobot CLI as standalone Telegram bot and agent framework
- Replace custom Discord bot with nanobot gateway for Telegram
- Update README to reflect Telegram bot, nanobot architecture, and
  skills system
- Remove legacy agent_logic.py, bot.py, test_agent.py, and
  requirements.txt
- Simplify Dockerfile to install nanobot-ai and run `nanobot gateway`
- Update Gradio UI to wrap `nanobot agent` CLI instead of LangChain
  agents
- Add output/ to .gitignore
  Refactor to use nanobot CLI as standalone Telegram bot and agent
  framework

--- a/discord-bot/Dockerfile
+++ b/discord-bot/Dockerfile
@@ -2,21 +2,29 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install system dependencies for matplotlib (if needed) and chromium for kaleido
+# Install system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    libfreetype6-dev \
-    libpng-dev \
     chromium \
+    git \
     && rm -rf /var/lib/apt/lists/*
 
-# Set local browser path for kaleido if needed, or rely on PATH
-ENV KALEIDO_CHROMIUM_PATH=/usr/bin/chromium
+# Install nanobot-ai and dependencies
+RUN pip install nanobot-ai gradio python-dotenv
 
-COPY requirements.txt .
-RUN pip install uv && uv pip install --system --no-cache -r requirements.txt
+# Create nanobot workspace directory and copy skills
+RUN mkdir -p /root/.nanobot/workspace
+COPY discord-bot/skills /root/.nanobot/workspace/skills
 
-COPY . .
+# Copy Gradio UI from discord-bot directory
+COPY discord-bot/gradio_ui.py .
 
+# Copy entrypoint script
+COPY discord-bot/entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+# Expose port for Gradio (if running web-ui service)
 EXPOSE 7860
 
-CMD ["python", "bot.py"]
+# Use entrypoint to generate config
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["nanobot", "gateway"]
